--- a/SimpleSSO-CertAuth-Server/package.json
+++ b/SimpleSSO-CertAuth-Server/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "connect-mongodb-session": "^2.1.1",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "memorystore": "^1.6.1",
+    "mongodb": "^2.2.33",
     "morgan": "~1.9.1",
     "pem": "^1.14.2",
     "twig": "~0.10.3",
